--- a/Localisation/AR.json
+++ b/Localisation/AR.json
@@ -1,115 +1,115 @@
 {
     "TranslationsData": {
-        " (elite max)": " (elite max)",
-        " (unrestored)": " (unrestored)",
-        " records": " records",
-        " sec": " sec",
+        " (elite max)": " (النخبة القصوى)",
+        " (unrestored)": " (غير مُرمم)",
+        " records": " سجلات",
+        " sec": " ثانية",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
-        "ABOUT": "ABOUT",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
-        "AUDIO": "AUDIO",
-        "AUTOSHOW": "AUTOSHOW",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
-        "Agree": "Agree",
-        "All the best races of the racers are here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
-        "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
-        "Avatar": "Avatar",
-        "BACK": "BACK",
-        "BEST DRIVER!": "BEST DRIVER!",
-        "BEST:": "BEST:",
-        "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating of the tier": "Basic specs and the car rating at the tier",
-        "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
-        "Boss time: ": "Boss time: ",
-        "CAR INFO (from Vision spreadsheet)": "CAR INFO (vision)",
-        "CONFIRM CHANGES": "CONFIRM CHANGES",
-        "CONNECTION FAILED": "CONNECTION FAILED",
-        "CREATORS": "CREATORS",
-        "CREDITS": "CREDITS",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "Car name": "Car name",
-        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Check out the cost of each part, as well as the effects of the sixth parts!",
-        "City camera speed": "City camera speed",
-        "Click here to change the leaderboard!": "Click here to change the leaderboard!",
-        "Click to change car type!": "Click to change car type!",
-        "DYNO:": "DYNO:",
-        "Download failed, check your internet connection and restart the app": "Failed download, check internet connection and restart app",
-        "Driver": "Driver",
-        "ELITE MAX": "ELITE MAX",
-        "ELITE STOCK": "ELITE STOCK",
-        "EXIT": "EXIT",
-        "Effects volume": "Effects volume",
-        "Enable localisation": "Enable localisation",
-        "FAVORITEs": "FAVORITEs",
-        "FINAL DRIVE": "FINAL DRIVE",
-        "FPS limiter": "FPS limiter",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
-        "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "GRAPHICS": "GRAPHICS",
-        "Gacha imports": "Gacha imports",
-        "Get update!": "Get update!",
-        "Get updated information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
-        "Graphics quality": "Graphics quality",
-        "I know it already": "I already know",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
-        "Initializing database...": "Initializing the database...",
-        "LOADING SCREEN": "LOADING SCREEN",
-        "Let's choose the unrestored version": "Let's choose the unrestored version",
-        "Let's go!": "Let's go!",
-        "Let's look at LEGENDS": "Let's look at LEGENDS",
-        "Let's look at this car": "Let's look at this car",
-        "MILESTONE SEASON CAR": "MILESTONE SEASON CAR",
-        "Music clip": "Music clip",
-        "Music volume": "Music volume",
-        "NEW": "NEW",
-        "NITROUS OXIDE": "NITROUS OXIDE",
-        "Number of upgrades and fusion parts": "Number of upgrades and fusion parts",
-        "OFF": "OFF",
-        "ON": "ON",
-        "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHERS": "OTHERS",
-        "Petrol or electric car": "Petrol or electric car",
-        "Preparing the city...": "Preparing the city...",
-        "Price of full car upgrades": "Price of full car upgrades",
-        "Price of the car:": "Price of the car:",
-        "Quit": "Quit",
-        "RARE IMPORTS": "RARE IMPORTS",
-        "RELEASE iNFO": "RELEASE iNFO",
-        "Rarity": "Rarity",
-        "Records": "Records",
-        "Reset": "Reset",
-        "Restart": "Restart",
-        "SEASON CARS": "SEASON CARS",
-        "SETTINGS": "SETTINGS",
-        "Save": "Save",
-        "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
-        "Start": "Start",
-        "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally an AUTOSHOW in the city, let me show you around?": "There's finally an AUTOSHOW in city, let me show you around?",
-        "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
-        "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car is a part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "This is the AUTOSHOW - information about all the cars are collected here! Let's see",
-        "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.",
-        "Time": "Time",
-        "To continue using the application you must agree to the terms the user agreement": "To continue using the application you must agree to the terms the user agreement",
-        "Total needed:": "Total needed:",
-        "UNRESTORED": "UNRESTORED",
-        "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
-        "Updating the database...": "Updating the database...",
-        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
-        "WELCOME!": "WELCOME!",
-        "WORLD RECORDS": "WORLD RECORDS",
-        "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to favorites": "You can add important cars to favorites",
-        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "You can find the car you need by manufacturers or car groups. There is even a favorites section!",
-        "You can go straight to the AUTOSHOW, just click on the car!": "You can go straight to the AUTOSHOW, just click on the car!",
-        "You can mark the cars you owned": "You can mark the cars you owned",
-        "You can see the best tuning settings here": "Here you can see the best tuning settings",
-        "You can see the visual specs here": "You can see the visual specs here",
-        "You could have won this car in the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "text coming soon...": "text coming soon..."
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【تحذير】</color> - حجم تنزيل كبير",
+        "ABOUT": "حول",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - تطبيق البنية التحتية والبناء\nNitro4CSR - إدارة الموارد ودمج بيانات المجتمع\nFREYCKSSON - تحديث الموارد\nMAINTAINERS - إنشاء وتحديث بيانات المجتمع\n\nالناشر: ムRimgine Entertainment\n\nالبريد الإلكتروني: csr2hub.service@gmail.com",
+        "AUDIO": "الصوت",
+        "AUTOSHOW": "عرض السيارات",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "وضع <color=#FFD540>PRO</color> لعرض السيارات (معلومات تقنية)",
+        "Agree": "موافق",
+        "All the best races of the racers are here! Let's see this hall of fame": "أفضل سباقات السائقين موجودة هنا! دعنا نرى قاعة المشاهير",
+        "And finally, click to see additional information about the car": "وأخيرًا، انقر لرؤية معلومات إضافية عن السيارة",
+        "Avatar": "الصورة الرمزية",
+        "BACK": "رجوع",
+        "BEST DRIVER!": "أفضل سائق!",
+        "BEST:": "الأفضل:",
+        "BOSS CAR": "سيارة الزعيم",
+        "Basic specs and the car rating of the tier": "المواصفات الأساسية وتصنيف السيارة في المستوى",
+        "Best result and racer. Click to watch the best shift video!": "أفضل نتيجة وسائق. انقر لمشاهدة أفضل فيديو للتحويل!",
+        "Boss time: ": "وقت الزعيم: ",
+        "CAR INFO (from Vision spreadsheet)": "معلومات السيارة (من جدول الرؤية)",
+        "CONFIRM CHANGES": "تأكيد التغييرات",
+        "CONNECTION FAILED": "فشل الاتصال",
+        "CREATORS": "المطورون",
+        "CREDITS": "الاعتمادات",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "يتطلب CSR<color=yellow>2</color>-HUB تنزيل بيانات: <color= #FFAA0D>{0}</color>، يرجى التأكد من عدم استخدام إنترنت محدود ثم تأكيد التنزيل",
+        "Car name": "اسم السيارة",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "تحقق من تكلفة كل جزء وتأثيرات ترقيات المرحلة السادسة!",
+        "City camera speed": "سرعة كاميرا المدينة",
+        "Click here to change the leaderboard!": "انقر هنا لتغيير لوحة الصدارة!",
+        "Click to change car type!": "انقر لتغيير نوع السيارة!",
+        "DYNO:": "الدينو:",
+        "Download failed, check your internet connection and restart the app": "فشل التنزيل، تحقق من اتصال الإنترنت وأعد تشغيل التطبيق",
+        "Driver": "سائق",
+        "ELITE MAX": "النخبة القصوى",
+        "ELITE STOCK": "النخبة الأساسية",
+        "EXIT": "خروج",
+        "Effects volume": "مستوى تأثيرات الصوت",
+        "Enable localisation": "تمكين التخصيص المحلي",
+        "FAVORITEs": "المفضلة",
+        "FINAL DRIVE": "القوة النهائية",
+        "FPS limiter": "محدد معدل الإطارات",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "أخيرًا يمكننا رؤية أسرع اللاعبين وسياراتهم. تعال معي، سأريك!",
+        "Find out how many elite components you need to fully upgrade your car!": "اكتشف عدد مكونات النخبة التي تحتاجها لترقية سيارتك بالكامل!",
+        "GRAPHICS": "الرسومات",
+        "Gacha imports": "واردات الغاتشا",
+        "Get update!": "احصل على التحديث!",
+        "Get updated information on how many Legends components you need to restore your car!": "احصل على معلومات محدثة حول عدد مكونات الأساطير التي تحتاجها لترميم سيارتك!",
+        "Graphics quality": "جودة الرسومات",
+        "I know it already": "أعرف ذلك مسبقًا",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "لضمان العمل المناسب، يتطلب التطبيق تنزيل بيانات إضافية، يرجى التحقق من اتصال الإنترنت والمحاولة مرة أخرى",
+        "Initializing database...": "جاري تهيئة قاعدة البيانات...",
+        "LOADING SCREEN": "شاشة التحميل",
+        "Let's choose the unrestored version": "دعنا نختار النسخة غير المرممة",
+        "Let's go!": "لنذهب!",
+        "Let's look at LEGENDS": "دعنا ننظر إلى الأساطير",
+        "Let's look at this car": "دعنا ننظر إلى هذه السيارة",
+        "MILESTONE SEASON CAR": "سيارة الموسم البارزة",
+        "Music clip": "مقطع موسيقي",
+        "Music volume": "مستوى الموسيقى",
+        "NEW": "جديد",
+        "NITROUS OXIDE": "أكسيد النيتروس",
+        "Number of upgrades and fusion parts": "عدد الترقيات وأجزاء الدمج",
+        "OFF": "إيقاف",
+        "ON": "تشغيل",
+        "OPEN CONFIGURATOR": "فتضبيط الإعدادات",
+        "OTHERS": "أخرى",
+        "Petrol or electric car": "سيارة بنزين أو كهربائية",
+        "Preparing the city...": "جاري تحضير المدينة...",
+        "Price of full car upgrades": "سعر ترقيات السيارة الكاملة",
+        "Price of the car:": "سعر السيارة:",
+        "Quit": "خروج",
+        "RARE IMPORTS": "واردات نادرة",
+        "RELEASE iNFO": "معلومات الإصدار",
+        "Rarity": "الندرة",
+        "Records": "السجلات",
+        "Reset": "إعادة تعيين",
+        "Restart": "إعادة تشغيل",
+        "SEASON CARS": "سيارات الموسم",
+        "SETTINGS": "الإعدادات",
+        "Save": "حفظ",
+        "Some settings have been changed, save changes?": "تم تغيير بعض الإعدادات، هل تريد حفظ التغييرات؟",
+        "Start": "بدء",
+        "TIRE PRESSURE": "ضغط الإطارات",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "أخيرًا هناك عرض سيارات في المدينة، هل تريد أن أريك الجولة؟",
+        "This car can be obtained by defeating the boss": "يمكن الحصول على هذه السيارة عن طريق هزيمة الزعيم",
+        "This car cannot be obtained anywhere": "لا يمكن الحصول على هذه السيارة في أي مكان",
+        "This car is a part of a collection and can be purchased with collection credits.": "هذه السيارة جزء من مجموعة ويمكن شراؤها باستخدام نقاط المجموعة.",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "هذا هو عرض السيارات - معلومات عن جميع السيارات مجمعة هنا! دعنا نرى",
+        "This is the podium, the best cars and drivers show off here": "هذه هي المنصة، أفضل السيارات والسائقين يعرضون هنا",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "تم إنشاء هذا المشروع لأتمتة وجمع المعلومات الضرورية للعبة في مكان واحد!\n\nجميع موارد التطبيق تقريبًا تعود للعبة CSR2 ومملوكة لـ NaturalMotion => Zynga => Take-Two Interactive. الموارد المستخدمة هي لعرض معلومات مرجعية للمجتمع فقط ولا شيء أكثر.",
+        "Time": "الوقت",
+        "To continue using the application you must agree to the terms the user agreement": "لمتابعة استخدام التطبيق، يجب الموافقة على شروط اتفاقية المستخدم",
+        "Total needed:": "الإجمالي المطلوب:",
+        "UNRESTORED": "غير مُرمم",
+        "UPGRADE DETAILED INFO": "معلومات تفصيلية عن الترقية",
+        "Updating the database...": "جاري تحديث قاعدة البيانات...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "منخفض جدًا|منخفض|متوسط|مرتفع|مرتفع جدًا|فائق",
+        "WELCOME!": "مرحبًا!",
+        "WORLD RECORDS": "السجلات العالمية",
+        "WR CAR RATING": "تصنيف سيارات السجلات العالمية",
+        "You can add important cars to favorites": "يمكنك إضافة سيارات مهمة إلى المفضلة",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "يمكنك العثور على السيارة التي تريدها عبر الشركات المصنعة أو مجموعات السيارات. هناك حتى قسم المفضلة!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "يمكنك الذهاب مباشرة إلى عرض السيارات، فقط انقر على السيارة!",
+        "You can mark the cars you owned": "يمكنك وضع علامة على السيارات التي تمتلكها",
+        "You can see the best tuning settings here": "يمكنك رؤية أفضل إعدادات الضبط هنا",
+        "You can see the visual specs here": "يمكنك رؤية المواصفات البصرية هنا",
+        "You could have won this car in the following seasons:": "كان يمكنك الفوز بهذه السيارة في المواسم التالية:",
+        "text coming soon...": "النص قريبًا..."
     }
 }
