--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -5,12 +5,12 @@
         " records": " records",
         " sec": " sec",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ATTENTION】</color> - TAILLE DE TÉLÉCHARGEMENT IMPORTANTE",
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<couleur=orange>【ATTENTION】</couleur> - TAILLE DE TÉLÉCHARGEMENT IMPORTANTE",
         "ABOUT": "À PROPOS",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastructure et application de construction\nNitro4CSR - Gestion des ressources et intégration des données communautaires\nFREYCKSSON - Mise à jour des ressources\nMAINTAINERS - Création et mise à jour des données communautaires\n\nÉditeur : ムRimgine Entertainment\n\nE-mail : csr2hub.service@gmail.com",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "SALON DE L'AUTO",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Mode <color=#FFD540>PRO</color> du SALON DE L'AUTO (informations techniques)",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Mode <couleur=#FFD540>PRO</couleur> du SALON DE L'AUTO (informations techniques)",
         "Agree": "Accepter",
         "All the best races of the racers are here! Let's see this hall of fame": "Toutes les meilleures courses des pilotes sont ici ! Voyons ce temple de la renommée.",
         "And finally, click to see additional information about the car": "Enfin, cliquez pour voir des informations supplémentaires sur la voiture",
@@ -22,12 +22,12 @@
         "Basic specs and the car rating of the tier": "Spécifications de base et classement de la voiture pour ce niveau",
         "Best result and racer. Click to watch the best shift video!": "Meilleur résultat et pilote. Cliquez pour voir la vidéo du meilleur passage !",
         "Boss time: ": "Temps du boss : ",
-        "CAR INFO (from Vision spreadsheet)": "INFOS VOITURE (vision)",
+        "CAR INFO (from Vision spreadsheet)": "INFOS VOITURE (visualisation)",
         "CONFIRM CHANGES": "CONFIRMER LES MODIFICATIONS",
         "CONNECTION FAILED": "ÉCHEC DE CONNEXION",
         "CREATORS": "CRÉATEURS",
         "CREDITS": "CRÉDITS",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB doit télécharger des données : <color= #FFAA0D>{0}</color>. Vérifiez que vous n'utilisez pas un réseau limité, puis confirmez le téléchargement.",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<couleur=yellow>2</couleur>-HUB doit télécharger des données : <couleur= #FFAA0D>{0}</couleur>. Vérifiez que vous n'utilisez pas un réseau limité, puis confirmez le téléchargement.",
         "Car name": "Nom de la voiture",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Découvrez le coût de chaque pièce et les effets des améliorations de niveau 6 !",
         "City camera speed": "Vitesse de la caméra en ville",
@@ -51,14 +51,14 @@
         "Get update!": "Mettre à jour !",
         "Get updated information on how many Legends components you need to restore your car!": "Obtenez des informations à jour sur les composants Legends nécessaires pour restaurer votre voiture !",
         "Graphics quality": "Qualité graphique",
-        "I know it already": "Je sais déjà",
+        "I know it already": "Je le sais déjà",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Pour fonctionner correctement, l'application nécessite des données supplémentaires. Vérifiez votre connexion Internet et réessayez.",
         "Initializing database...": "Initialisation de la base de données...",
         "LOADING SCREEN": "ÉCRAN DE CHARGEMENT",
         "Let's choose the unrestored version": "Choisissons la version non restaurée",
         "Let's go!": "Allons-y !",
-        "Let's look at LEGENDS": "Observons les LÉGENDES",
-        "Let's look at this car": "Regardons cette voiture",
+        "Let's look at LEGENDS": "Regardons les LÉGENDES",
+        "Let's look at this car": "Examinons cette voiture",
         "MILESTONE SEASON CAR": "VOITURE PHARE DE LA SAISON",
         "Music clip": "Clip musical",
         "Music volume": "Volume de la musique",
@@ -75,7 +75,7 @@
         "Price of the car:": "Prix de la voiture :",
         "Quit": "Quitter",
         "RARE IMPORTS": "IMPORTATIONS RARES",
-        "RELEASE iNFO": "INFOS DE VERSION",
+        "RELEASE iNFO": "INFOS DE LA VERSION",
         "Rarity": "Rareté",
         "Records": "Records",
         "Reset": "Réinitialiser",
@@ -86,7 +86,7 @@
         "Some settings have been changed, save changes?": "Certains paramètres ont été modifiés. Sauvegarder ?",
         "Start": "Commencer",
         "TIRE PRESSURE": "PRESSION DES PNEUS",
-        "There's finally an AUTOSHOW in the city, let me show you around?": "Il y a enfin un SALON DE L'AUTO en ville. Je vous fais visiter ?",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "Il y a enfin un SALON DE L'AUTO en ville. Je vous le fais visiter ?",
         "This car can be obtained by defeating the boss": "Cette voiture s'obtient en battant le boss",
         "This car cannot be obtained anywhere": "Cette voiture n'est disponible nulle part",
         "This car is a part of a collection and can be purchased with collection credits.": "Cette voiture fait partie d'une collection et peut être achetée avec des crédits de collection.",
@@ -101,7 +101,7 @@
         "Updating the database...": "Mise à jour de la base de données...",
         "Very Low|Low|Medium|High|Very High|Ultra": "Très bas|Bas|Moyen|Élevé|Très élevé|Ultra",
         "WELCOME!": "BIENVENUE !",
-        "WORLD RECORDS": "RECORDS MONDIALUX",
+        "WORLD RECORDS": "RECORDS DU MONDE",
         "WR CAR RATING": "CLASSEMENT DES VOITURES (RECORDS)",
         "You can add important cars to favorites": "Vous pouvez ajouter des voitures importantes aux favoris",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Recherchez des voitures par marque ou groupe. Il y a même une section favoris !",
