--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -7,7 +7,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ОСТОРОЖНО】</color> -    ПОТОКОВАЯ ЗАГРУЗКА",
         "ABOUT": "О ПРОЕКТЕ",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment\n\nПо всем вопросам: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment\n\nПо всем вопросам: csr2hub.service@gmail.com",
         "AUDIO": "АУДИО",
         "AUTOSHOW": "АВТОШОУ",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
@@ -27,12 +27,12 @@
         "CONNECTION FAILED": "ОШИБКА СОЕДИНЕНИЯ",
         "CREATORS": "СОЗДАТЕЛИ",
         "CREDITS": "ИНФО",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
+        "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
         "Car name": "Имя автомобиля",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Ознакомьтесь со стоимостью каждой части, а также с эффективностью шестых деталей!",
         "City camera speed": "Чувствительность камеры",
         "Click here to change the leaderboard!": "Нажми здесь, чтобы сменить таблицу лидеров!",
-        "Click to change car type!": "Нажми здесь, чтобы изменить состояние автомобиля!",
+        "Click to change the car type!": "Нажми здесь, чтобы изменить состояние автомобиля!",
         "DYNO:": "ДИНО:",
         "Download failed, check your internet connection and restart the app": "Ошибка загрузки, проверьте подключение к интеренету и перезапустите приложение",
         "Driver": "Гонщик",
@@ -94,7 +94,7 @@
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
         "Time": "Время",
-        "To continue using the application you must agree to the terms the user agreement": "Чтобы продолжить пользоваться приложением вам нужно принять условия пользовательского соглашения",
+        "To continue using the application you must agree to the user agreement terms.": "Чтобы продолжить пользоваться приложением вам нужно принять условия пользовательского соглашения",
         "Total needed:": "Всего необходимо:",
         "UNRESTORED": "НЕВОССТАНОВЛЕННЫЙ",
         "UPGRADE DETAILED INFO": "ДЕТАЛЬНАЯ ИНФОРМАЦИЯ ОБ УЛУЧШЕНИЯХ",
